Fix tooltips not showing the correct tooltip data in rare cases due to rounding. Also slightly move where tooltip shows up.
git-svn-id: https://tapjoy.unfuddle.com/svn/tapjoy_tapjoyads/trunk@7586 6df48309-bd3c-4361-8df8-ec25136b6021

--- a/tapjoyads/public/stylesheets/tapjoy_graph.css
+++ b/tapjoyads/public/stylesheets/tapjoy_graph.css
@@ -25,6 +25,7 @@
   padding-right: 3px;
   z-index: 3;
   opacity: 0.8;
+  margin: 0 6px 0 10px;
   -moz-border-radius: 5px 5px 5px 5px;
   -moz-box-shadow: 3px 3px 3px rgba(96, 96, 96, 0.5);
   -webkit-border-radius: 5px 5px 5px 5px;
